# quill

./: .gitignore  Cargo.toml  DEPLOYMENT.md  LICENSE  README.md  test.quill
.github/workflows/: auto-tag-release.yml  ci.yml  release.yml
Formula/: quill-task.rb
quill-cli/: config.json  go.mod  main.go  quill-config.json
quill-cli/cmd/: create-page.go  init.go  root.go
quill-cli/pkg/git/branch/: get-current-branch.go  get-local-branches.go  init.go
quill-cli/pkg/git/init/: find-git-root.go  init.go
quill-cli/pkg/git/meta/: get-remote-url.go
quill-cli/pkg/git/org/: get-org-name.go  init.go
quill-cli/pkg/git/repo/: get-repo-name.go
quill-cli/pkg/quill/helpers/: generate-id.go  generateId.go  get-default-library-path.go
quill-cli/pkg/quill/init/: create-library-dir.go  create-library-directory.go  create-skeleton.go  init.go
quill-cli/pkg/quill/notebooks/: create-notebook-dir.go  create-notebook.go  get-current-notebook-dir-path.go  get-current-notebook-file-path.go  get-file-path.go  init.go
quill-cli/pkg/quill/notes/: init.go
quill-cli/pkg/quill/pages/: create-page-dir.go  create-page.go  init.go
quill-cli/pkg/quill/tasks/: init.go
quill-cli/utils/git/branch/: getCurrentBranch.go
quill-cli/utils/git/repo/: init.go
quill-cli/utils/quill/: init.go
quill-lang/: CHANGELOG.md  README.md  package-lock.json  package.json  vsc-extension-quickstart.md
quill-lang/src/: extension.ts
quill-lang/syntaxes/: quill.tmLanguage.json
src/: app.rs  config.rs  git.rs  main.rs  storage.rs  ui.rs
src/storage/: local.rs  mod.rs  mongodb.rs
(+3 files in other folders)
