[package]
name = "quill-todo"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.27"
ratatui = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
git2 = "0.18"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
dirs = "5.0"
notify = "6.1"